--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,12 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "jsdom": "^24.0.0",
+    "prettier": "^3.5.3",
     "typescript": "^5.3.3",
     "vite": "^5.1.0",
     "vitest": "^3.1.3"
