--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,11 @@ fastapi>=0.109.0
 uvicorn>=0.27.0
 requests>=2.31.0
 
+# Database
+sqlalchemy>=2.0.0
+alembic>=1.13.0
+psycopg2-binary>=2.9.9
+
 # Testing
 pytest>=8.0.0
 pytest-cov>=4.1.0
