--- a/.gitignore
+++ b/.gitignore
@@ -4,57 +4,52 @@ __pycache__/
 *$py.class
 *.so
 .Python
-venv/
-env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 .env
 .venv
+venv/
 ENV/
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.nox/
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
 
 # Node
 node_modules/
-dist/
-build/
-.next/
-out/
-coverage/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# IDEs and editors
+# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+
+# Database
+*.db
+*.sqlite3
+
+# Coverage
+.coverage
+coverage.xml
+htmlcov/
+
+# OS
 .DS_Store
-*.sublime-workspace
-*.sublime-project
-
-# Environment files
-.env
-.env.local
-.env.*.local
-.env.development
-.env.test
-.env.production
-!.env.example
-
-# Build outputs
-dist/
-build/
-*.pyc
-
-# Logs
-*.log
-logs/
+Thumbs.db
