--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -17,6 +17,10 @@ jobs:
       run:
         working-directory: ./backend
 
+    env:
+      PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
+      PYTHONPATH: ${{ github.workspace }}/backend
+
     steps:
     - uses: actions/checkout@v3
     
@@ -29,10 +33,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest-cov pytest-asyncio
         
     - name: Run tests with coverage
       run: |
-        pytest --cov=app tests/ --cov-report=xml
+        python -m pytest tests/ --cov=app --cov-report=xml
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
