--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,6 +1,8 @@
 [pytest]
 testpaths = tests
 python_files = test_*.py
+python_classes = Test*
 python_functions = test_*
 addopts = --cov=app --cov-report=term-missing
-asyncio_mode = auto 
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function 
