--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -44,7 +44,9 @@ jobs:
         python -m pytest tests/ --cov=app --cov-report=xml
         
     - name: Upload coverage to Codecov
+      if: success() && github.event_name == 'push'
       uses: codecov/codecov-action@v3
       with:
         file: ./backend/coverage.xml
-        fail_ci_if_error: true 
+        fail_ci_if_error: false
+        token: ${{ secrets.CODECOV_TOKEN }} 
