--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -20,6 +20,7 @@ jobs:
     env:
       VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
       VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+      CI: true
 
     steps:
     - uses: actions/checkout@v3
@@ -34,6 +35,4 @@ jobs:
       run: yarn install --frozen-lockfile
         
     - name: Run tests
-      run: yarn test
-      env:
-        CI: true 
+      run: yarn test --run 
