Fix frontend tests and CI/CD setup: Add ESLint config, Supabase mocks, and test improvements

--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -36,5 +36,8 @@ jobs:
         rm -f package-lock.json  # Remove package-lock.json to avoid conflicts
         yarn install --frozen-lockfile
         
+    - name: Run linting
+      run: yarn lint --max-warnings 0
+        
     - name: Run tests
       run: yarn test --run 
