--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -4,18 +4,18 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'backend/**'
+      - 'packages/backend/**'
   pull_request:
     branches: [ main ]
     paths:
-      - 'backend/**'
+      - 'packages/backend/**'
 
 jobs:
   test:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./backend
+        working-directory: ./packages/backend
 
     env:
       # Required for Sonar API integration
@@ -23,10 +23,10 @@ jobs:
       # Development database (SQLite)
       SQLALCHEMY_DATABASE_URL: "sqlite:///./test.db"
       # Python path for imports
-      PYTHONPATH: ${{ github.workspace }}/backend
+      PYTHONPATH: ${{ github.workspace }}/packages/backend
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -47,6 +47,6 @@ jobs:
       if: success() && github.event_name == 'push'
       uses: codecov/codecov-action@v3
       with:
-        file: ./backend/coverage.xml
+        file: ./packages/backend/coverage.xml
         fail_ci_if_error: false
         token: ${{ secrets.CODECOV_TOKEN }} 
