--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,12 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'yarn'
+        cache: 'pnpm'
+
+    - name: Set up pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: 10.11.0
 
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -36,32 +41,27 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f backend/requirements.txt ]; then
-          pip install -r backend/requirements.txt
+        if [ -f packages/backend/requirements.txt ]; then
+          pip install -r packages/backend/requirements.txt
         fi
 
     - name: Install Node.js dependencies
-      run: yarn install --frozen-lockfile
+      run: pnpm install --frozen-lockfile
 
     - name: Run backend tests
       run: |
-        if [ -d backend ]; then
-          cd backend
+        if [ -d packages/backend ]; then
+          cd packages/backend
           python -m pytest
         fi
       env:
         PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
 
-    - name: Run frontend lint
-      run: |
-        if [ -d frontend ]; then
-          cd frontend
-          yarn lint
-        fi
+    - name: Run lint
+      run: pnpm turbo lint
 
-    - name: Run frontend tests
-      run: |
-        if [ -d frontend ]; then
-          cd frontend
-          yarn test
-        fi 
+    - name: Run tests
+      run: pnpm turbo test
+
+    - name: Run build
+      run: pnpm turbo build 
