--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -4,18 +4,18 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'frontend/**'
+      - 'packages/frontend/**'
   pull_request:
     branches: [ main ]
     paths:
-      - 'frontend/**'
+      - 'packages/frontend/**'
 
 jobs:
   test:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./frontend
+        working-directory: ./packages/frontend
 
     env:
       VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
@@ -23,21 +23,24 @@ jobs:
       CI: true
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'yarn'
-        
+        cache: 'pnpm'
+    
+    - name: Set up pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: 10.11.0
+    
     - name: Install dependencies
-      run: |
-        rm -f package-lock.json  # Remove package-lock.json to avoid conflicts
-        yarn install --frozen-lockfile
-        
+      run: pnpm install --frozen-lockfile
+    
     - name: Run linting
-      run: yarn lint --max-warnings 0
-        
+      run: pnpm turbo lint --filter=frontend...
+    
     - name: Run tests
-      run: yarn test --run 
+      run: pnpm turbo test --filter=frontend... 
