--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Set up pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: 10.11.0
+    
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
