--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -7,23 +7,31 @@
     "storage",
     "activeTab",
     "scripting",
-    "tabs"
+    "tabs",
+    "sidePanel"
   ],
   "host_permissions": [
-    "https://perplexity.ai/*",
-    "http://localhost:8004/*",
-    "https://localhost:8004/*"
+    "*://*.perplexity.ai/*"
   ],
   "action": {
     "default_popup": "popup.html"
   },
+  "side_panel": {
+    "default_path": "sidepanel.html"
+  },
   "content_scripts": [
     {
-      "matches": ["https://perplexity.ai/*"],
+      "matches": ["*://*.perplexity.ai/*"],
       "js": ["content-script.js"]
     }
   ],
   "background": {
     "service_worker": "background.js"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "your-extension-id@example.com",
+      "strict_min_version": "109.0"
+    }
   }
 } 
