--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -6,5 +6,9 @@
     "build": "vite build",
     "postbuild": "cp ../extension/manifest.json dist/manifest.json && cp ../extension/background.js dist/background.js && cp ../extension/content-script.js dist/content-script.js && cp -R ../extension/icons dist/icons || true"
   },
-  "devDependencies": {}
-} 
+  "devDependencies": {
+    "@preact/preset-vite": "^2.10.1",
+    "preact": "^10.26.6",
+    "vite": "^6.3.5"
+  }
+}
