--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
     "test": "turbo run test"
   },
   "devDependencies": {
+    "@preact/preset-vite": "^2.10.1",
     "eslint": "^8.56.0",
-    "prettier": "^3.2.5",
-    "turbo": "latest"
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.4.0",
+    "husky": "^9.1.7",
+    "preact": "^10.26.6",
+    "prettier": "^3.5.3",
+    "turbo": "latest",
+    "vite": "^5.4.19",
+    "vite-plugin-chrome-extension": "^0.0.7"
   }
 }
