fix: extension sidepanel and build process - Fix sidepanel opening functionality - Update build script to copy all necessary files - Add proper error handling for sidepanel open

--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -26,8 +26,13 @@
     }
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
+  "web_accessible_resources": [{
+    "resources": ["sidepanel.html"],
+    "matches": ["<all_urls>"]
+  }],
   "browser_specific_settings": {
     "gecko": {
       "id": "your-extension-id@example.com",
