--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "vite build",
-    "postbuild": "mv dist/src/sidepanel.html dist/sidepanel.html && rmdir dist/src || true && cp manifest.json dist/manifest.json && cp background.js dist/background.js && cp content-script.js dist/content-script.js && cp -R icons dist/icons || true"
+    "postbuild": "rm -rf dist && mkdir dist && cp manifest.json dist/ && cp background.js dist/ && cp content-script.js dist/ && cp popup.html dist/ && cp popup.js dist/ && cp sidepanel.html dist/ && cp -R icons dist/icons || true"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.1",
