--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["chrome"]
   },
   "include": ["src"]
 } 
