fix(extension): correct Preact/Chrome types and SidePanel JSX usage

--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["chrome"]
+    "types": ["chrome", "preact"]
   },
   "include": ["src"]
 } 
