--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "vite build && tsc src/content-script.ts --outDir dist && npm run copy-files",
-    "copy-files": "cp src/manifest.json dist/ && cp src/background.ts dist/background.js && cp -r public dist/"
+    "copy-files": "cp src/manifest.json dist/ && cp src/background.ts dist/background.js && cp -r public dist/ && cp src/popup/index.html dist/popup.html && cp src/sidepanel/index.html dist/sidepanel.html"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.1",
