--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -5,10 +5,10 @@
   "description": "A Chrome extension for the Curiosity Engine",
   "permissions": ["storage", "sidePanel"],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup/index.html"
   },
   "side_panel": {
-    "default_path": "sidepanel.html"
+    "default_path": "sidepanel/index.html"
   },
   "background": {
     "service_worker": "background.js",
@@ -21,8 +21,8 @@
     }
   ],
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "assets/icon16.png",
+    "48": "assets/icon48.png",
+    "128": "assets/icon128.png"
   }
 } 
