--- a/packages/backend/requirements.txt
+++ b/packages/backend/requirements.txt
@@ -3,10 +3,9 @@ fastapi>=0.109.0
 uvicorn>=0.27.0
 requests>=2.31.0
 
-# Database
-sqlalchemy>=2.0.0
-alembic>=1.13.0
-psycopg2-binary>=2.9.9
+# Supabase
+supabase>=2.3.4
+python-dotenv>=1.0.0
 
 # Testing
 pytest>=8.0.0
