--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -17,7 +17,7 @@
 
   "content_scripts": [
     {
-      "matches":   ["https://www.perplexity.ai/*"],
+      "matches":   ["*://*.perplexity.ai/*"],
       "js":        ["content-script/index.js"],
       "run_at":    "document_idle",
       "all_frames": true
