Fix trips page async/await and update project structure - Fix Promise chain issue in trips page by converting to async/await - Remove browser extension package and related files - Update dependencies and package configurations - Add ESLint configuration for web app - Improve auth context and trip management components - Update gitignore to exclude Next.js build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,15 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
+# Next.js
+.next/
+out/
+dist/
+*.tsbuildinfo
+
+# Turbo
+.turbo/
+
 # IDE
 .idea/
 .vscode/
