--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "packageManager": "pnpm@10.11.0",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "scripts": {
     "dev": "turbo run dev",
@@ -13,11 +14,15 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "husky": "^9.1.7",
     "preact": "^10.26.6",
     "prettier": "^3.5.3",
